k8s/manifest/istio/open-match/evaluator/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: open-match-evaluator
  namespace: open-match
spec:
  host: open-match-evaluator.open-match.svc.cluster.local
  subsets:
  - name: long-connection
    labels:
      app: open-match-customize
      component: evaluator
      release: open-match
    trafficPolicy:
      connectionPool:
        tcp:
          connectTimeout: 300s
        http:
          http2MaxRequests: 4000
          idleTimeout: 300s
  - name: default
    labels:
      app: open-match-customize
      component: evaluator
      release: open-match
    trafficPolicy:
      connectionPool:
        tcp:
          connectTimeout: 10s
        http:
          http2MaxRequests: 4000
          idleTimeout: 300s
