k8s/manifest/istio/open-match/evaluator/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: open-match-evaluator
  namespace: open-match
spec:
  hosts:
  - open-match-evaluator.open-match.svc.cluster.local
  http:
  - name: long-connection
    match:
    - uri:
        prefix: /openmatch.Evaluator/Evaluate
    route:
    - destination:
        host: open-match-evaluator.open-match.svc.cluster.local
        port:
          number: 50508
        subset: long-connection
    timeout: 300s
    retries:
      attempts: 10
      perTryTimeout: 300ms
      retryOn: 5xx,unavailable,internal,deadline-exceeded,cancelled
  - name: default
    route:
    - destination:
        host: open-match-evaluator.open-match.svc.cluster.local
        port:
          number: 50508
        subset: default
    timeout: 10s
    retries:
      attempts: 10
      perTryTimeout: 300ms
      retryOn: 5xx,unavailable,internal,deadline-exceeded,cancelled
